@@ -17,10 +17,10 @@
 
 package org.openqa.selenium.bidi;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.Closeable;
 import java.time.Duration;
 import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
 import org.openqa.selenium.internal.Require;
@@ -29,12 +29,9 @@ public class BiDi implements Closeable {
 
   private final Duration timeout = Duration.ofSeconds(30);
   private final Connection connection;
-  private final BiDiSessionStatus status;
 
   public BiDi(Connection connection) {
     this.connection = Require.nonNull("WebSocket connection", connection);
-    this.status =
-        send(new Command<>("session.status", Collections.emptyMap(), BiDiSessionStatus.class));
   }
 
   @Override
@@ -54,19 +51,18 @@ public class BiDi implements Closeable {
     return connection.sendAndWait(command, timeout);
   }
 
-  public <X> void addListener(Event<X> event, Consumer<X> handler) {
+  public <X> long addListener(Event<X> event, Consumer<X> handler) {
     Require.nonNull("Event to listen for", event);
     Require.nonNull("Handler to call", handler);
 
     send(
         new Command<>(
-            "session.subscribe",
-            ImmutableMap.of("events", Collections.singletonList(event.getMethod()))));
+            "session.subscribe", Map.of("events", Collections.singletonList(event.getMethod()))));
 
-    connection.addListener(event, handler);
+    return connection.addListener(event, handler);
   }
 
-  <X> void addListener(String browsingContextId, Event<X> event, Consumer<X> handler) {
+  public <X> long addListener(String browsingContextId, Event<X> event, Consumer<X> handler) {
     Require.nonNull("Event to listen for", event);
     Require.nonNull("Browsing context id", browsingContextId);
     Require.nonNull("Handler to call", handler);
@@ -74,16 +70,16 @@ public class BiDi implements Closeable {
     send(
         new Command<>(
             "session.subscribe",
-            ImmutableMap.of(
+            Map.of(
                 "contexts",
                 Collections.singletonList(browsingContextId),
                 "events",
                 Collections.singletonList(event.getMethod()))));
 
-    connection.addListener(event, handler);
+    return connection.addListener(event, handler);
   }
 
-  <X> void addListener(Set<String> browsingContextIds, Event<X> event, Consumer<X> handler) {
+  public <X> long addListener(Set<String> browsingContextIds, Event<X> event, Consumer<X> handler) {
     Require.nonNull("List of browsing context ids", browsingContextIds);
     Require.nonNull("Event to listen for", event);
     Require.nonNull("Handler to call", handler);
@@ -91,13 +87,13 @@ public class BiDi implements Closeable {
     send(
         new Command<>(
             "session.subscribe",
-            ImmutableMap.of(
+            Map.of(
                 "contexts",
                 browsingContextIds,
                 "events",
                 Collections.singletonList(event.getMethod()))));
 
-    connection.addListener(event, handler);
+    return connection.addListener(event, handler);
   }
 
   public <X> void clearListener(Event<X> event) {
@@ -109,10 +105,14 @@ public class BiDi implements Closeable {
       send(
           new Command<>(
               "session.unsubscribe",
-              ImmutableMap.of("events", Collections.singletonList(event.getMethod()))));
+              Map.of("events", Collections.singletonList(event.getMethod()))));
 
       connection.clearListener(event);
     }
+  }
+
+  public void removeListener(long id) {
+    connection.removeListener(id);
   }
 
   public void clearListeners() {
@@ -120,6 +120,6 @@ public class BiDi implements Closeable {
   }
 
   public BiDiSessionStatus getBidiSessionStatus() {
-    return status;
+    return send(new Command<>("session.status", Collections.emptyMap(), BiDiSessionStatus.class));
   }
 }
