@@ -22,12 +22,11 @@ import static org.openqa.selenium.internal.Debug.getDebugLogLevel;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
-import com.google.common.collect.HashMultimap;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Multimap;
 import java.io.Closeable;
 import java.io.StringReader;
 import java.time.Duration;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
@@ -36,6 +35,7 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReadWriteLock;
@@ -66,19 +66,29 @@ public class Connection implements Closeable {
             return thread;
           });
   private static final AtomicLong NEXT_ID = new AtomicLong(1L);
-  private final WebSocket socket;
+  private final AtomicLong EVENT_CALLBACK_ID = new AtomicLong(1);
+  private WebSocket socket;
   private final Map<Long, Consumer<Either<Throwable, JsonInput>>> methodCallbacks =
       new ConcurrentHashMap<>();
   private final ReadWriteLock callbacksLock = new ReentrantReadWriteLock(true);
-  private final Multimap<Event<?>, Consumer<?>> eventCallbacks = HashMultimap.create();
+  private final Map<Event<?>, Map<Long, Consumer<?>>> eventCallbacks = new HashMap<>();
   private final HttpClient client;
+  private final AtomicBoolean underlyingSocketClosed = new AtomicBoolean();
 
   public Connection(HttpClient client, String url) {
     Require.nonNull("HTTP client", client);
     Require.nonNull("URL to connect to", url);
 
     this.client = client;
-    socket = this.client.openSocket(new HttpRequest(GET, url), new Listener());
+    // If WebDriver close() is called, it closes the session if it is the last browsing context.
+    // It also closes the WebSocket from the remote end.
+    // If WebDriver quit() is called, it also tries to close an already closed websocket and that
+    // causes errors.
+    // Ideally, such errors should not prevent freeing up resources.
+    // This measure is needed until "session.end" from BiDi is implemented by the browsers.
+    if (!underlyingSocketClosed.get()) {
+      socket = this.client.openSocket(new HttpRequest(GET, url), new Listener());
+    }
   }
 
   private static class NamedConsumer<X> implements Consumer<X> {
@@ -133,16 +143,17 @@ public class Connection implements Closeable {
               }));
     }
 
-    ImmutableMap.Builder<String, Object> serialized = ImmutableMap.builder();
-    serialized.put("id", id);
-    serialized.put("method", command.getMethod());
-    serialized.put("params", command.getParams());
+    Map<String, Object> serialized =
+        Map.of(
+            "id", id,
+            "method", command.getMethod(),
+            "params", command.getParams());
 
     StringBuilder json = new StringBuilder();
     try (JsonOutput out = JSON.newOutput(json).writeClassName(false)) {
-      out.write(serialized.build());
+      out.write(serialized);
     }
-    LOG.log(getDebugLogLevel(), () -> String.format("-> %s", json));
+    LOG.log(getDebugLogLevel(), "-> {0}", json);
     socket.sendText(json);
 
     if (!command.getSendsResponse()) {
@@ -170,24 +181,46 @@ public class Connection implements Closeable {
     }
   }
 
-  public <X> void addListener(Event<X> event, Consumer<X> handler) {
+  public <X> long addListener(Event<X> event, Consumer<X> handler) {
     Require.nonNull("Event to listen for", event);
     Require.nonNull("Handler to call", handler);
+
+    long id = EVENT_CALLBACK_ID.getAndIncrement();
 
     Lock lock = callbacksLock.writeLock();
     lock.lock();
     try {
-      eventCallbacks.put(event, handler);
+      eventCallbacks.computeIfAbsent(event, key -> new HashMap<>()).put(id, handler);
     } finally {
       lock.unlock();
     }
+    return id;
   }
 
   public <X> void clearListener(Event<X> event) {
     Lock lock = callbacksLock.writeLock();
     lock.lock();
     try {
-      eventCallbacks.removeAll(event);
+      eventCallbacks.remove(event);
+    } finally {
+      lock.unlock();
+    }
+  }
+
+  public void removeListener(long id) {
+    Lock lock = callbacksLock.writeLock();
+    lock.lock();
+    try {
+      List<Event<?>> list = new ArrayList<>();
+      eventCallbacks.forEach(
+          (k, v) -> {
+            v.remove(id);
+            if (v.isEmpty()) {
+              list.add(k);
+            }
+          });
+
+      list.forEach(eventCallbacks::remove);
     } finally {
       lock.unlock();
     }
@@ -210,7 +243,14 @@ public class Connection implements Closeable {
       List<String> events =
           eventCallbacks.keySet().stream().map(Event::getMethod).collect(Collectors.toList());
 
-      send(new Command<>("session.unsubscribe", ImmutableMap.of("events", events)));
+      // If WebDriver close() is called, it closes the session if it is the last browsing context.
+      // It also closes the WebSocket from the remote end.
+      // If we try to now send commands, depending on the underlying web socket implementation, it
+      // will throw errors.
+      // Ideally, such errors should not prevent freeing up resources.
+      if (!underlyingSocketClosed.get()) {
+        send(new Command<>("session.unsubscribe", Map.of("events", events)));
+      }
 
       eventCallbacks.clear();
     } finally {
@@ -220,7 +260,10 @@ public class Connection implements Closeable {
 
   @Override
   public void close() {
-    socket.close();
+    if (!underlyingSocketClosed.get()) {
+      underlyingSocketClosed.set(true);
+      socket.close();
+    }
     client.close();
   }
 
@@ -237,6 +280,12 @@ public class Connection implements Closeable {
             }
           });
     }
+
+    @Override
+    public void onClose(int code, String reason) {
+      LOG.fine("BiDi connection websocket closed");
+      underlyingSocketClosed.set(true);
+    }
   }
 
   private void handle(CharSequence data) {
@@ -245,7 +294,7 @@ public class Connection implements Closeable {
     // TODO: decode once, and once only
 
     String asString = String.valueOf(data);
-    LOG.log(getDebugLogLevel(), () -> String.format("<- %s", asString));
+    LOG.log(getDebugLogLevel(), "<- {0}", asString);
 
     Map<String, Object> raw = JSON.toType(asString, MAP_TYPE);
     if (raw.get("id") instanceof Number
@@ -294,26 +343,33 @@ public class Connection implements Closeable {
             "Method"
                 + rawDataMap.get("method")
                 + "called with"
-                + eventCallbacks.keySet().size()
+                + eventCallbacks.size()
                 + "callbacks available");
     Lock lock = callbacksLock.readLock();
-    lock.lock();
+    // A waiting writer will block a reader to enter the lock, even if there are currently other
+    // readers holding the lock. TryLock will bypass the waiting writers and acquire the read lock.
+    // A thread processing an event (and holding the read-lock) might wait for another event before
+    // continue processing the event (and releasing the read-lock). Without tryLock this would end
+    // in a deadlock, as soon as a writer will try to acquire a write-lock.
+    if (!lock.tryLock()) {
+      lock.lock();
+    }
     try {
-      eventCallbacks.keySet().stream()
+      eventCallbacks.entrySet().stream()
           .filter(
               event -> {
                 LOG.log(
                     getDebugLogLevel(),
-                    String.format(
-                        "Matching %s with %s", rawDataMap.get("method"), event.getMethod()));
-                return rawDataMap.get("method").equals(event.getMethod());
+                    "Matching {0} with {1}",
+                    new Object[] {rawDataMap.get("method"), event.getKey().getMethod()});
+                return rawDataMap.get("method").equals(event.getKey().getMethod());
               })
           .forEach(
               event -> {
                 Map<String, Object> params = (Map<String, Object>) rawDataMap.get("params");
                 Object value = null;
                 if (params != null) {
-                  value = event.getMapper().apply(params);
+                  value = event.getKey().getMapper().apply(params);
                 }
                 if (value == null) {
                   return;
@@ -321,14 +377,13 @@ public class Connection implements Closeable {
 
                 final Object finalValue = value;
 
-                for (Consumer<?> action : eventCallbacks.get(event)) {
+                for (Consumer<?> action : event.getValue().values()) {
                   @SuppressWarnings("unchecked")
                   Consumer<Object> obj = (Consumer<Object>) action;
                   LOG.log(
                       getDebugLogLevel(),
-                      String.format(
-                          "Calling callback for %s using %s being passed %s",
-                          event, obj, finalValue));
+                      "Calling callback for {0} using {1} being passed {2}",
+                      new Object[] {event.getKey(), obj, finalValue});
                   obj.accept(finalValue);
                 }
               });
