@@ -22,9 +22,6 @@ import static org.openqa.selenium.internal.Debug.getDebugLogLevel;
 import static org.openqa.selenium.remote.DriverCommand.QUIT;
 import static org.openqa.selenium.remote.http.HttpMethod.DELETE;
 
-import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableSet;
-import java.io.Closeable;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.URI;
@@ -93,7 +90,7 @@ public class RemoteWebDriverBuilder {
 
   private static final Logger LOG = Logger.getLogger(RemoteWebDriverBuilder.class.getName());
   private static final Set<String> ILLEGAL_METADATA_KEYS =
-      ImmutableSet.of("alwaysMatch", "capabilities", "desiredCapabilities", "firstMatch");
+      Set.of("alwaysMatch", "capabilities", "desiredCapabilities", "firstMatch");
   private final List<Capabilities> requestedCapabilities = new ArrayList<>();
   private final Map<String, Object> additionalCapabilities = new TreeMap<>();
   private final Map<String, Object> metadata = new TreeMap<>();
@@ -101,31 +98,7 @@ public class RemoteWebDriverBuilder {
       config -> {
         HttpClient.Factory factory = HttpClient.Factory.createDefault();
         HttpClient client = factory.createClient(config);
-        return client.with(
-            next ->
-                req -> {
-                  try {
-                    return client.execute(req);
-                  } finally {
-                    if (req.getMethod() == DELETE) {
-                      HttpSessionId.getSessionId(req.getUri())
-                          .ifPresent(
-                              id -> {
-                                if (("/session/" + id).equals(req.getUri())) {
-                                  try {
-                                    client.close();
-                                  } catch (UncheckedIOException e) {
-                                    LOG.log(
-                                        WARNING,
-                                        "Swallowing exception while closing http client",
-                                        e);
-                                  }
-                                  factory.cleanupIdleClients();
-                                }
-                              });
-                    }
-                  }
-                });
+        return client.with(new CloseHttpClientFilter(factory, client));
       };
   private ClientConfig clientConfig = ClientConfig.defaultConfig();
   private URI remoteHost = null;
@@ -309,7 +282,7 @@ public class RemoteWebDriverBuilder {
     return this;
   }
 
-  @VisibleForTesting
+  /** visible for testing only */
   RemoteWebDriverBuilder connectingWith(Function<ClientConfig, HttpHandler> handlerFactory) {
     Require.nonNull("Handler factory", handlerFactory);
     this.handlerFactory = handlerFactory;
@@ -325,7 +298,7 @@ public class RemoteWebDriverBuilder {
     return this;
   }
 
-  @VisibleForTesting
+  /** visible for testing only */
   WebDriver getLocalDriver() {
     if (remoteHost != null || clientConfig.baseUri() != null || driverService != null) {
       return null;
@@ -333,7 +306,6 @@ public class RemoteWebDriverBuilder {
 
     Set<WebDriverInfo> infos =
         StreamSupport.stream(ServiceLoader.load(WebDriverInfo.class).spliterator(), false)
-            .filter(WebDriverInfo::isAvailable)
             .collect(Collectors.toSet());
 
     Capabilities additional = new ImmutableCapabilities(additionalCapabilities);
@@ -343,8 +315,8 @@ public class RemoteWebDriverBuilder {
             .flatMap(
                 caps ->
                     infos.stream()
-                        .filter(WebDriverInfo::isAvailable)
                         .filter(info -> info.isSupporting(caps))
+                        .filter(WebDriverInfo::isAvailable)
                         .map(
                             info ->
                                 (Supplier<WebDriver>)
@@ -412,8 +384,7 @@ public class RemoteWebDriverBuilder {
     HttpHandler handler =
         Require.nonNull("Http handler", client)
             .with(
-                new CloseHttpClientFilter(client)
-                    .andThen(new AddWebDriverSpecHeaders())
+                new AddWebDriverSpecHeaders()
                     .andThen(new ErrorFilter())
                     .andThen(new DumpHttpExchangeFilter()));
 
@@ -531,9 +502,11 @@ public class RemoteWebDriverBuilder {
 
   private static class CloseHttpClientFilter implements Filter {
 
-    private final HttpHandler client;
+    private final HttpClient.Factory factory;
+    private final HttpClient client;
 
-    CloseHttpClientFilter(HttpHandler client) {
+    CloseHttpClientFilter(HttpClient.Factory factory, HttpClient client) {
+      this.factory = Require.nonNull("Http client factory", factory);
       this.client = Require.nonNull("Http client", client);
     }
 
@@ -543,16 +516,17 @@ public class RemoteWebDriverBuilder {
         try {
           return next.execute(req);
         } finally {
-          if (req.getMethod() == DELETE && client instanceof Closeable) {
+          if (req.getMethod() == DELETE) {
             HttpSessionId.getSessionId(req.getUri())
                 .ifPresent(
                     id -> {
                       if (("/session/" + id).equals(req.getUri())) {
                         try {
-                          ((Closeable) client).close();
-                        } catch (IOException e) {
+                          client.close();
+                        } catch (Exception e) {
                           LOG.log(WARNING, "Exception swallowed while closing http client", e);
                         }
+                        factory.cleanupIdleClients();
                       }
                     });
           }
