@@ -18,7 +18,7 @@
 package org.openqa.selenium.safari;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
@@ -28,6 +28,7 @@ import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.http.HttpMethod;
 
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
 public class AddHasPermissions
     implements AugmenterProvider<HasPermissions>, AdditionalHttpCommands {
@@ -36,7 +37,7 @@ public class AddHasPermissions
   public static final String SET_PERMISSIONS = "setPermissions";
 
   private static final Map<String, CommandInfo> COMMANDS =
-      ImmutableMap.of(
+      Map.of(
           GET_PERMISSIONS, new CommandInfo("/session/:sessionId/apple/permissions", HttpMethod.GET),
           SET_PERMISSIONS,
               new CommandInfo("/session/:sessionId/apple/permissions", HttpMethod.POST));
@@ -61,15 +62,26 @@ public class AddHasPermissions
     return new HasPermissions() {
       @Override
       public void setPermissions(String permission, boolean value) {
-        executeMethod.execute(
-            SET_PERMISSIONS, ImmutableMap.of("permissions", ImmutableMap.of(permission, value)));
+        executeMethod.execute(SET_PERMISSIONS, Map.of("permissions", Map.of(permission, value)));
       }
 
       @Override
       public Map<String, Boolean> getPermissions() {
-        Map<String, Object> results =
-            (Map<String, Object>) executeMethod.execute(GET_PERMISSIONS, null);
-        return (Map<String, Boolean>) results.get("permissions");
+        Object resultObject = executeMethod.execute(GET_PERMISSIONS, null);
+
+        if (resultObject instanceof Map<?, ?>) {
+          Map<?, ?> resultMap = (Map<?, ?>) resultObject;
+          Map<String, Boolean> permissionMap = new HashMap<>();
+          for (Map.Entry<?, ?> entry : resultMap.entrySet()) {
+            if (entry.getKey() instanceof String && entry.getValue() instanceof Boolean) {
+              permissionMap.put((String) entry.getKey(), (Boolean) entry.getValue());
+            }
+          }
+          return permissionMap;
+        } else {
+          throw new IllegalStateException(
+              "Unexpected result type: " + resultObject.getClass().getName());
+        }
       }
     };
   }
