@@ -25,18 +25,17 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.InstanceOfAssertFactories.MAP;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.Contents.string;
+import static org.openqa.selenium.remote.http.HttpMethod.DELETE;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 import static org.openqa.selenium.remote.http.HttpMethod.POST;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Clock;
@@ -102,7 +101,9 @@ class NodeTest {
   private Tracer tracer;
   private EventBus bus;
   private LocalNode local;
+  private LocalNode local2;
   private Node node;
+  private Node node2;
   private ImmutableCapabilities stereotype;
   private ImmutableCapabilities caps;
   private URI uri;
@@ -150,6 +151,7 @@ class NodeTest {
       builder = builder.enableManagedDownloads(true).sessionTimeout(Duration.ofSeconds(1));
     }
     local = builder.build();
+    local2 = builder.build();
 
     node =
         new RemoteNode(
@@ -158,6 +160,17 @@ class NodeTest {
             new NodeId(UUID.randomUUID()),
             uri,
             registrationSecret,
+            local.getSessionTimeout(),
+            ImmutableSet.of(caps));
+
+    node2 =
+        new RemoteNode(
+            tracer,
+            new PassthroughHttpClient.Factory(local2),
+            new NodeId(UUID.randomUUID()),
+            uri,
+            registrationSecret,
+            local2.getSessionTimeout(),
             ImmutableSet.of(caps));
   }
 
@@ -172,6 +185,7 @@ class NodeTest {
             new NodeId(UUID.randomUUID()),
             uri,
             registrationSecret,
+            local.getSessionTimeout(),
             ImmutableSet.of());
 
     Either<WebDriverException, CreateSessionResponse> response =
@@ -223,6 +237,7 @@ class NodeTest {
             new NodeId(UUID.randomUUID()),
             uri,
             registrationSecret,
+            local.getSessionTimeout(),
             ImmutableSet.of(caps));
 
     ImmutableCapabilities wrongCaps = new ImmutableCapabilities("browserName", "burger");
@@ -346,6 +361,7 @@ class NodeTest {
             new NodeId(UUID.randomUUID()),
             uri,
             registrationSecret,
+            local.getSessionTimeout(),
             ImmutableSet.of(caps));
 
     Either<WebDriverException, CreateSessionResponse> response =
@@ -367,13 +383,30 @@ class NodeTest {
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
+    Either<WebDriverException, CreateSessionResponse> response2 =
+        node2.newSession(createSessionRequest(caps));
+    assertThatEither(response2).isRight();
+    Session session2 = response2.right().getSession();
+
+    // Assert that should respond to commands for sessions Node 1 owns
     HttpRequest req = new HttpRequest(POST, String.format("/session/%s/url", session.getId()));
     assertThat(local.matches(req)).isTrue();
     assertThat(node.matches(req)).isTrue();
 
-    req = new HttpRequest(POST, String.format("/session/%s/url", UUID.randomUUID()));
-    assertThat(local.matches(req)).isFalse();
-    assertThat(node.matches(req)).isFalse();
+    // Assert that should respond to commands for sessions Node 2 owns
+    HttpRequest req2 = new HttpRequest(POST, String.format("/session/%s/url", session2.getId()));
+    assertThat(local2.matches(req2)).isTrue();
+    assertThat(node2.matches(req2)).isTrue();
+
+    // Assert that should not respond to commands for sessions Node 1 does not own
+    HttpResponse res1 = node.execute(req2);
+    assertThat(res1.getStatus()).isEqualTo(404);
+    assertThat(Contents.string(res1)).contains("invalid session id");
+
+    // Assert that should not respond to commands for sessions Node 2 does not own
+    HttpResponse res2 = node2.execute(req);
+    assertThat(res2.getStatus()).isEqualTo(404);
+    assertThat(Contents.string(res2)).contains("invalid session id");
   }
 
   @Test
@@ -520,11 +553,11 @@ class NodeTest {
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
-    HttpRequest req = new HttpRequest(POST, String.format("/session/%s/file", session.getId()));
+    HttpRequest req = new HttpRequest(POST, String.format("/session/%s/se/file", session.getId()));
     String hello = "Hello, world!";
     String zip = Zip.zip(createTmpFile(hello));
     String payload = new Json().toJson(Collections.singletonMap("file", zip));
-    req.setContent(() -> new ByteArrayInputStream(payload.getBytes()));
+    req.setContent(Contents.bytes(payload.getBytes()));
     node.execute(req);
 
     File baseDir = getTemporaryFilesystemBaseDir(local.getUploadsFilesystem(session.getId()));
@@ -552,7 +585,7 @@ class NodeTest {
     String zip = simulateFileDownload(session.getId(), hello);
 
     String payload = new Json().toJson(Collections.singletonMap("name", zip));
-    req.setContent(() -> new ByteArrayInputStream(payload.getBytes()));
+    req.setContent(Contents.bytes(payload.getBytes()));
     HttpResponse rsp = node.execute(req);
     Map<String, Object> raw = new Json().toType(string(rsp), Json.MAP_TYPE);
     try {
@@ -591,7 +624,7 @@ class NodeTest {
     simulateFileDownload(session.getId(), "Goodbye, world!");
 
     String payload = new Json().toJson(Collections.singletonMap("name", zip));
-    req.setContent(() -> new ByteArrayInputStream(payload.getBytes()));
+    req.setContent(Contents.bytes(payload.getBytes()));
     HttpResponse rsp = node.execute(req);
     Map<String, Object> raw = new Json().toType(string(rsp), Json.MAP_TYPE);
     try {
@@ -634,6 +667,30 @@ class NodeTest {
               .orElseThrow(() -> new IllegalStateException("Could not find value attribute"));
       List<String> files = (List<String>) map.get("names");
       assertThat(files).contains(zip);
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void canDeleteFileDownloads() throws IOException {
+
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    String zip = simulateFileDownload(session.getId(), "Hello, world!");
+
+    try {
+      assertThat(listFileDownloads(session.getId())).contains(zip);
+
+      HttpRequest deleteRequest =
+          new HttpRequest(DELETE, String.format("/session/%s/se/files", session.getId()));
+      HttpResponse deleteResponse = node.execute(deleteRequest);
+      assertThat(deleteResponse.isSuccessful()).isTrue();
+
+      assertThat(listFileDownloads(session.getId()).isEmpty()).isTrue();
     } finally {
       node.stop(session.getId());
     }
@@ -733,7 +790,7 @@ class NodeTest {
       HttpRequest req =
           new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
       String payload = new Json().toJson(Collections.singletonMap("my-file", "README.md"));
-      req.setContent(() -> new ByteArrayInputStream(payload.getBytes()));
+      req.setContent(Contents.bytes(payload.getBytes()));
 
       String msg = "Please specify file to download in payload as {\"name\": \"fileToDownload\"}";
       assertThatThrownBy(() -> node.execute(req)).hasMessageContaining(msg);
@@ -755,7 +812,7 @@ class NodeTest {
       HttpRequest req =
           new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
       String payload = new Json().toJson(Collections.singletonMap("name", "README.md"));
-      req.setContent(() -> new ByteArrayInputStream(payload.getBytes()));
+      req.setContent(Contents.bytes(payload.getBytes()));
 
       String msg = "Cannot find file [README.md] in directory";
       assertThatThrownBy(() -> node.execute(req)).hasMessageContaining(msg);
@@ -859,7 +916,7 @@ class NodeTest {
     try {
       File f = new File(directory.getAbsolutePath(), UUID.randomUUID().toString());
       f.deleteOnExit();
-      Files.write(directory.toPath(), content.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(directory.toPath(), content);
       return f;
     } catch (IOException e) {
       throw new RuntimeException(e);
@@ -870,7 +927,7 @@ class NodeTest {
     try {
       File f = File.createTempFile("webdriver", "tmp");
       f.deleteOnExit();
-      Files.write(f.toPath(), content.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(f.toPath(), content);
       return f;
     } catch (IOException e) {
       throw new UncheckedIOException(e);
@@ -903,6 +960,18 @@ class NodeTest {
               + target.getParentFile().getAbsolutePath());
     }
     return zip.getName();
+  }
+
+  private List<String> listFileDownloads(SessionId sessionId) {
+    HttpRequest req = new HttpRequest(GET, String.format("/session/%s/se/files", sessionId));
+    HttpResponse rsp = node.execute(req);
+    Map<String, Object> raw = new Json().toType(string(rsp), Json.MAP_TYPE);
+    assertThat(raw).isNotNull();
+    Map<String, Object> map =
+        Optional.ofNullable(raw.get("value"))
+            .map(data -> (Map<String, Object>) data)
+            .orElseThrow(() -> new IllegalStateException("Could not find value attribute"));
+    return (List<String>) map.get("names");
   }
 
   private static class MyClock extends Clock {
